magic: Massive rework of spell builder architecture
Special spells are removed altogether, effects per aspect are
now split based on how it is used (item, area, interaction).
It is also now possible to use spells by interacting with
entities.