@@ -1,5 +1,8 @@
 package com.github.sweetsnowywitch.csmprpgkit.magic;
 
+import com.github.sweetsnowywitch.csmprpgkit.magic.effects.AreaEffect;
+import com.github.sweetsnowywitch.csmprpgkit.magic.effects.ItemEffect;
+import com.github.sweetsnowywitch.csmprpgkit.magic.effects.UseEffect;
 import com.google.common.collect.ImmutableList;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.item.Item;
@@ -23,31 +26,48 @@ public sealed interface SpellElement permits Aspect, ItemElement {
 
     int getColor();
 
-    default List<SpellEffect> getGenericEffects() {
-        return List.of();
+    default ImmutableList<ItemEffect> itemEffects() {
+        return ImmutableList.of();
     }
 
-    default List<SpellReaction> getGenericReactions() {
-        return List.of();
+    default ImmutableList<AreaEffect> areaEffects() {
+        return ImmutableList.of();
     }
 
-    default @Nullable SpellForm getPreferredForm() { return null; }
-    default int getPreferredFormWeight() { return 0; }
+    default ImmutableList<UseEffect> useEffects() {
+        return ImmutableList.of();
+    }
+
+    default ImmutableList<SpellReaction> formReactions() {
+        return ImmutableList.of();
+    }
+
+    default @Nullable SpellForm getPreferredForm() {
+        return null;
+    }
+
+    default int getPreferredFormWeight() {
+        return 0;
+    }
 
     /**
      * Called when SpellElement is consumed during spell completion.
      */
-    default void consume() {}
+    default void consume() {
+    }
 
     /**
      * Called to check whether the user is still able to use the element.
      * Should recheck the same requirements that are checked when element was added.
      */
-    default boolean isValid(@Nullable LivingEntity user) { return true; }
+    default boolean isValid(@Nullable LivingEntity user) {
+        return true;
+    }
 
     static SpellElement of(Aspect asp) {
         return asp;
     }
+
     @Contract(value = "_ -> new", pure = true)
     static @NotNull SpellElement of(Item item) {
         return new ItemElement(item);
@@ -57,7 +77,8 @@ public sealed interface SpellElement permits Aspect, ItemElement {
         return switch (comp.getString("Type")) {
             case "Aspect" -> Aspect.fromNbt(comp);
             case "Item" -> ItemElement.fromNbt(comp);
-            default -> throw new IllegalArgumentException("Unknown SpellElement type: %s".formatted(comp.getString("Type")));
+            default ->
+                    throw new IllegalArgumentException("Unknown SpellElement type: %s".formatted(comp.getString("Type")));
         };
     }
 
